Browser, fragments, CRUD operation on DOM.

--- a/LiveClass/8.Browser/index.html
+++ b/LiveClass/8.Browser/index.html
@@ -13,7 +13,21 @@
         <p id="para" class="sharma golf">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id numquam deleniti cumque sit temporibus consequuntur neque eligendi libero. Corporis, accusamus. Recusandae assumenda quis consequatur adipisci? Suscipit commodi illo nobis ipsum?</p>
 
         <p id="para2" class="sharma golf">para 2</p>
-        
+
+        <div id="container">
+            container
+        </div>
+
+        <!-- Un ordered list -->
+        <ul id="studentList">
+            <li>akash </li>
+            <li>anup </li>
+            <li>tanmay </li>
+            <li>sumit </li>
+        </ul>
+
+
+        <!-- hello -->
 
 
         <script src="./script.js"></script>
