capture and bubble phase

--- a/LiveClass/11.Events/3.CaptureAndBubble(propogation)/index.html
+++ b/LiveClass/11.Events/3.CaptureAndBubble(propogation)/index.html
@@ -10,13 +10,25 @@
         <h1>Capture and bubble</h1>
 
 
-        <button id="button">Button click me </button>
+        <!-- <button id="button">Button click me </button>
 
         <div id="container2" class="container" style="height: 100px; width: 100px; border: 1px solid black; margin: 10px;">
             container 2
         </div>
 
-        <input type="text" id="inputbox" placeholder="enter your name">
+        <input type="text" id="inputbox" placeholder="enter your name"> -->
+
+
+        <div class="container" id="grandparent">
+            grandparent
+            <div class="container" id="parent">
+                parent
+                <div class="container" id="child">
+                    child
+                </div>
+            </div>
+        </div>
+
 
         <script src="./script.js"></script>
     </body>
